--- a/includes/descrips_initial.tex
+++ b/includes/descrips_initial.tex
@@ -1,13 +1,18 @@
-\begin{longtable}{l|rrrrrrrr}
+\begin{longtable}{lrrrrrrrr}
+\caption*{
+{\large Table 1: Descriptive Statistics}
+} \\ 
 \toprule
-\multicolumn{1}{l}{} & Means & SDs & IV1 & IV2 & IV3 & IV4 & Y\_Normal & Y\_Poisson \\ 
+ &  &  & \multicolumn{6}{c}{Correlations} \\ 
+\cmidrule(lr){4-9}
+Variable & Mean & Standard Deviation & ER & AS & SL & WE & SJ & MJ \\ 
 \midrule
-IV1 & 0.001330068 & 0.3039554 & 1.000000000 & 0.3809086 & -0.13690020 & 0.005635913 & 0.07803106 & 0.07067855 \\ 
-IV2 & -0.001447403 & 0.5344685 & 0.380908600 & 1.0000000 & -0.27832116 & -0.585105979 & -0.16860563 & -0.15336969 \\ 
-IV3 & 0.003514622 & 0.8471215 & -0.136900200 & -0.2783212 & 1.00000000 & -0.094324027 & 0.04828792 & 0.04471122 \\ 
-IV4 & 0.007954359 & 1.1458255 & 0.005635913 & -0.5851060 & -0.09432403 & 1.000000000 & 0.31371935 & 0.28567272 \\ 
-Y\_Normal & 0.002088013 & 0.9984605 & 0.078031061 & -0.1686056 & 0.04828792 & 0.313719350 & 1.00000000 & 0.91270742 \\ 
-Y\_Poisson & 1.000140000 & 0.9999350 & 0.070678555 & -0.1533697 & 0.04471122 & 0.285672719 & 0.91270742 & 1.00000000 \\ 
+ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.3734$ & $0.3237$ \\ 
+AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.3954$ & $0.3425$ \\ 
+SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.3410$ & $0.2967$ \\ 
+WE & $0.0144$ & $1.9211$ & $0.2180$ & $0.2850$ & $0.3295$ & $1.0000$ & $0.3586$ & $0.3188$ \\ 
+SJ & $0.9963$ & $1.0090$ & $0.3734$ & $0.3954$ & $0.3410$ & $0.3586$ & $1.0000$ & $0.8773$ \\ 
+MJ & $1.0000$ & $1.7571$ & $0.3237$ & $0.3425$ & $0.2967$ & $0.3188$ & $0.8773$ & $1.0000$ \\ 
 \bottomrule
 \end{longtable}
 
