--- a/includes/poisson_coeff.tex
+++ b/includes/poisson_coeff.tex
@@ -1,12 +1,17 @@
-\begin{longtable}{l|rrrrrrr}
+\begin{longtable}{l|rrrrrrrr}
+\caption*{
+{\large Table 2: Poisson Regression}
+} \\ 
 \toprule
-\multicolumn{1}{l}{} & Coefficient & SE & z & p & CI\_low & CI\_high & Std\_Coefficient \\ 
+\multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{Confidence Interval} &  &  &  &  \\ 
+\cmidrule(lr){4-5}
+\multicolumn{1}{l}{} & Coefficient & SE & Low & High & z & p & IRR & Standardized \\ 
 \midrule
-(Intercept) & $-0.049$ & $0.003$ & $-14.889$ & $0.000$ & $-0.056$ & $-0.043$ & $0.000$ \\ 
-IV1 & $0.237$ & $0.012$ & $19.994$ & $0.000$ & $0.213$ & $0.260$ & $0.072$ \\ 
-IV2 & $0.046$ & $0.009$ & $5.141$ & $0.000$ & $0.029$ & $0.064$ & $0.025$ \\ 
-IV3 & $0.107$ & $0.004$ & $25.926$ & $0.000$ & $0.099$ & $0.115$ & $0.091$ \\ 
-IV4 & $0.269$ & $0.004$ & $70.957$ & $0.000$ & $0.262$ & $0.277$ & $0.308$ \\ 
+(Intercept) & $-0.1509$ & $0.0139$ & $-0.1782$ & $-0.1239$ & $-10.8831$ & $0.0000$ & $0.8599$ & $0.0000$ \\ 
+ER & $0.1817$ & $0.0114$ & $0.1593$ & $0.2040$ & $15.9313$ & $0.0000$ & $1.1992$ & $0.2154$ \\ 
+AS & $0.1532$ & $0.0095$ & $0.1346$ & $0.1718$ & $16.1525$ & $0.0000$ & $1.1655$ & $0.2220$ \\ 
+SL & $0.1381$ & $0.0083$ & $0.1218$ & $0.1544$ & $16.5715$ & $0.0000$ & $1.1481$ & $0.2138$ \\ 
+WE & $0.0981$ & $0.0069$ & $0.0846$ & $0.1116$ & $14.2399$ & $0.0000$ & $1.1031$ & $0.1884$ \\ 
 \bottomrule
 \end{longtable}
 
