--- a/CountDominance.tex
+++ b/CountDominance.tex
@@ -200,51 +200,103 @@
 	That is, to reduce the elements of the data that made them simulated in order to focus on the concepts
 	
 	The data simulated in this section were intended to describe the generation of garments from a tailors in a fortnight or two-week period.
-	Data from a total of 
-	?N!? % how many
-	simulated tailors were generated over this period across two different garments/DVs and for four garment generation factors/IVs.
+	Data from a total of 6,780 simulated tailors were generated over this period across two different garments/DVs and for four garment generation factors/IVs.
 	
 	One dependent variable, the number of stock sport coats of a set size made by the tailors, is Poisson distributed. 
 	The second dependent variable, number of made-to-measure sport coats with custom elements made by the tailors, is negative Binomial distributed. 
 	The four garment generation factors include a] equipment reliability, b] assistant staffing levels, c] tailor skill-level, and d] tailor work experience.
-	Each of the four garment generation factors were designed to be unit multivariate Normally distributed with pre-specified relationships with the two forms of garment count DVs.
+	Each of the four garment generation factors were designed to be multivariate Normally distributed with pre-specified relationships with the two forms of garment count DVs.
 	The pre-specified relationships between each of the garment generation factors with both garment count DVs were identical.
 	The only factor that differed between garment generation factors was the distribution of the DV.
 	Both garment count DVs were designed to have mean values of 1.
 	The negative Binomial, made-to-order sport coat count variable was also designed to have a variance of 3.	
 	
-	The means, standard deviations, and correlations between all four IVs and two DVs is reported below...
+	The means, standard deviations, and correlations between all four IVs and two DVs is reported below in Table 1. 
 	
-	... basically ended here ... update the table below and make it legible...
+\begin{longtable}{lrr|rrrrrr}
+	\caption*{
+		{\large Table 1: Descriptive Statistics}
+	} \\ 
+	\toprule
+	&  & Standard & \multicolumn{6}{c}{Correlations} \\ 
+	\cmidrule(lr){4-9}
+	Variable & Mean & Deviation & ER & AS & SL & WE & SJ & MJ \\ 
+	\midrule
+	ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.3734$ & $0.3237$ \\ 
+	AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.3954$ & $0.3425$ \\ 
+	SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.3410$ & $0.2967$ \\ 
+	WE & $0.0144$ & $1.9211$ & $0.2180$ & $0.2850$ & $0.3295$ & $1.0000$ & $0.3586$ & $0.3188$ \\ 
+	SJ & $0.9963$ & $1.0090$ & $0.3734$ & $0.3954$ & $0.3410$ & $0.3586$ & $1.0000$ & $0.8773$ \\ 
+	MJ & $1.0000$ & $1.7571$ & $0.3237$ & $0.3425$ & $0.2967$ & $0.3188$ & $0.8773$ & $1.0000$ \\ 
+	\bottomrule
+\end{longtable}
+
+	Table 1 shows that the means of each of the IVs are 0 and the means of the DVs are 1. 
+	Table 1 also shows variability between the IVs in terms of their variances with ER having the lowest variability and WE the highest.
+	The results also show modest to moderate-sized correlations between IVs with SL having some of the lowest overlap with other IVs and AS having the highest.
+	The results for the DVs also show distinctly different standard deviations with SJ following the Poisson distribution requirement that the mean equal the variance and MJ showing a much higher variation than the mean as is typical of negative Binomial distributed variables.
 	
-	\begin{longtable}{l|rr|rrrrrr}
-		\toprule
-		\multicolumn{1}{l}{} & Means & SDs & IV1 & IV2 & IV3 & IV4 & Y\_Normal & Y\_Poisson \\ 
-		\midrule
-		IV1 & 0.001330068 & 0.3039554 & 1.000000000 & 0.3809086 & -0.13690020 & 0.005635913 & 0.07803106 & 0.07067855 \\ 
-		IV2 & -0.001447403 & 0.5344685 & 0.380908600 & 1.0000000 & -0.27832116 & -0.585105979 & -0.16860563 & -0.15336969 \\ 
-		IV3 & 0.003514622 & 0.8471215 & -0.136900200 & -0.2783212 & 1.00000000 & -0.094324027 & 0.04828792 & 0.04471122 \\ 
-		IV4 & 0.007954359 & 1.1458255 & 0.005635913 & -0.5851060 & -0.09432403 & 1.000000000 & 0.31371935 & 0.28567272 \\ 
-		Y\_Normal & 0.002088013 & 0.9984605 & 0.078031061 & -0.1686056 & 0.04828792 & 0.313719350 & 1.00000000 & 0.91270742 \\ 
-		Y\_Poisson & 1.000140000 & 0.9999350 & 0.070678555 & -0.1533697 & 0.04471122 & 0.285672719 & 0.91270742 & 1.00000000 \\ 
-		\bottomrule
-	\end{longtable}
+	The next section moves on to using these data to estimate a PR with the SJ variable as well as an NBR with the MJ variable predicted by the four IVs.
 
 		\subsubsection{Regression Results}
 		
-	The LRM results predicting $Y_{Normal}$ are reported in Table X3.
+	The PR results predicting SJ are reported in Table 2. 
 	
-	\begin{longtable}{l|rrrrrrr}
+	\begin{longtable}{l|rrrrrrrr}
+		\caption*{
+			{\large Table 2: Poisson Regression}
+		} \\ 
 		\toprule
-		\multicolumn{1}{l}{} & Coefficient & SE & t & p & CI\_low & CI\_high & Std\_Coefficient \\ 
+		\multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{Confidence Interval} &  &  &  &  \\ 
+		\cmidrule(lr){4-5}
+		\multicolumn{1}{l}{} & Coefficient & SE & Low & High & z & p & IRR & Standardized \\ 
 		\midrule
-		\(Intercept\) & $-0.001$ & $0.003$ & $-0.315$ & $0.752$ & $-0.007$ & $0.005$ & $0.000$ \\ 
-		IV1 & $0.262$ & $0.011$ & $23.485$ & $0.000$ & $0.240$ & $0.284$ & $0.080$ \\ 
-		IV2 & $0.049$ & $0.008$ & $5.726$ & $0.000$ & $0.032$ & $0.065$ & $0.026$ \\ 
-		IV3 & $0.116$ & $0.004$ & $29.837$ & $0.000$ & $0.108$ & $0.123$ & $0.098$ \\ 
-		IV4 & $0.294$ & $0.004$ & $82.493$ & $0.000$ & $0.287$ & $0.301$ & $0.338$ \\ 
+	\(Intercept\) & $-0.1509$ & $0.0139$ & $-0.1782$ & $-0.1239$ & $-10.8831$ & $0.0000$ & $0.8599$ & $0.0000$ \\ 
+		ER & $0.1817$ & $0.0114$ & $0.1593$ & $0.2040$ & $15.9313$ & $0.0000$ & $1.1992$ & $0.2154$ \\ 
+		AS & $0.1532$ & $0.0095$ & $0.1346$ & $0.1718$ & $16.1525$ & $0.0000$ & $1.1655$ & $0.2220$ \\ 
+		SL & $0.1381$ & $0.0083$ & $0.1218$ & $0.1544$ & $16.5715$ & $0.0000$ & $1.1481$ & $0.2138$ \\ 
+		WE & $0.0981$ & $0.0069$ & $0.0846$ & $0.1116$ & $14.2399$ & $0.0000$ & $1.1031$ & $0.1884$ \\ 
 		\bottomrule
 	\end{longtable}
+
+	Table 2 shows that ER had the largest unstandardized coefficient and IRR value with a 1 unit change in equipment reliability leading to a 19.9\% increase in the number of stock jackets produced in a fortnight.
+	By contrast, WE obtained the smallest unstandardized coefficient and IRR value with a 1 unit change in equipment reliability leading to a 10.3\% increase in the number of stock jackets produced in a fortnight. 
+	AS and SL fell between ER and WE in terms of unstandardized coefficient/IRR results.
+	
+	The standardized coefficients, computed on each of the IVs standardized to have a variance of 1, show a different ordering of the IVS. 
+	In contrast to the unstandardized results, the biggest coefficient for the standardized results was associated with AS with ER a close second. 
+	Hence, the magnitude of the unstandardized coefficients was scale dependent.
+	This scale dependence is a well-known drawback of the use of use of unstandardized coefficients for comparing effects across IVs.
+	
+	The NBR results predicting MJ are reported below in Table 3.
+	
+\setlength{\LTpost}{1mm}
+\begin{longtable}{l|rrrrrrrr}
+	\caption*{
+		{\large Table 3: Negative Binomial Regression}
+	} \\ 
+	\toprule
+	\multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{Confidence Interval} &  &  &  &  \\ 
+	\cmidrule(lr){4-5}
+	\multicolumn{1}{l}{} & Coefficient & SE & Low & High & z & p & IRR & Standardized \\ 
+	\midrule
+	\(Intercept\) & $-0.3936$ & $0.0207$ & $-0.4341$ & $-0.3533$ & $-19.0401$ & $0.0000$ & $0.6747$ & $0.0000$ \\ 
+	ER & $0.3026$ & $0.0174$ & $0.2683$ & $0.3370$ & $17.4069$ & $0.0000$ & $1.3533$ & $0.3586$ \\ 
+	AS & $0.2589$ & $0.0144$ & $0.2305$ & $0.2874$ & $17.9264$ & $0.0000$ & $1.2955$ & $0.3752$ \\ 
+	SL & $0.2361$ & $0.0127$ & $0.2111$ & $0.2613$ & $18.5623$ & $0.0000$ & $1.2663$ & $0.3656$ \\ 
+	WE & $0.1702$ & $0.0105$ & $0.1497$ & $0.1909$ & $16.1851$ & $0.0000$ & $1.1856$ & $0.3270$ \\ 
+	\bottomrule
+\end{longtable}
+\begin{minipage}{\linewidth}
+	Theta parameter is 1.116105.\\
+\end{minipage}
+
+	Table 3's unstandardized/IRR results are similar to those of Table 2 in terms of ranking of magnitudes but produced larger values.
+	ER remained the largest IRR in the NBR with a 1 unit change in equipment reliability leading to a 35.3\% increase in the number of stock jackets produced in a fortnight.
+	WE remained the smallest IRR in the NBR with a 1 unit change in equipment reliability leading to a 18.6\% increase in the number of stock jackets produced in a fortnight.
+	
+	...ended here ...
+	
 	
 	Table X3 shows that the most substantial slope size obtained by any of the IVs is for $IV_4$ with a value of .294.  
 	A one unit change in $IV_4$ then produces a 0.294 change in $Y_{Normal}$.
