--- a/includes/all_subsets.tex
+++ b/includes/all_subsets.tex
@@ -1,22 +1,25 @@
-\begin{longtable}{lrr}
+\begin{longtable}{l|rr}
+\caption*{
+{\large Table 3: All Subsets Deviance R-square Results Across Models}
+} \\ 
 \toprule
-formula & \$R\textasciicircum{}2\_\{Y\_\{Normal\}\}\$ & \$R\textasciicircum{}2\_\{Y\_\{Poisson\}\}\$ \\ 
+\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/MJ \\ 
 \midrule
-Y \textasciitilde{} IV1 & $0.0061$ & $0.0044$ \\ 
-Y \textasciitilde{} IV2 & $0.0284$ & $0.0205$ \\ 
-Y \textasciitilde{} IV1 + IV2 & $0.0521$ & $0.0375$ \\ 
-Y \textasciitilde{} IV3 & $0.0023$ & $0.0017$ \\ 
-Y \textasciitilde{} IV1 + IV3 & $0.0096$ & $0.0070$ \\ 
-Y \textasciitilde{} IV2 + IV3 & $0.0284$ & $0.0205$ \\ 
-Y \textasciitilde{} IV1 + IV2 + IV3 & $0.0521$ & $0.0375$ \\ 
-Y \textasciitilde{} IV4 & $0.0984$ & $0.0711$ \\ 
-Y \textasciitilde{} IV1 + IV4 & $0.1042$ & $0.0753$ \\ 
-Y \textasciitilde{} IV2 + IV4 & $0.0988$ & $0.0714$ \\ 
-Y \textasciitilde{} IV1 + IV2 + IV4 & $0.1046$ & $0.0756$ \\ 
-Y \textasciitilde{} IV3 + IV4 & $0.1045$ & $0.0757$ \\ 
-Y \textasciitilde{} IV1 + IV3 + IV4 & $0.1122$ & $0.0812$ \\ 
-Y \textasciitilde{} IV2 + IV3 + IV4 & $0.1076$ & $0.0780$ \\ 
-Y \textasciitilde{} IV1 + IV2 + IV3 + IV4 & $0.1125$ & $0.0814$ \\ 
+ER & $0.1219$ & $0.1301$ \\ 
+AS & $0.1370$ & $0.1475$ \\ 
+SL & $0.1019$ & $0.1081$ \\ 
+WE & $0.1129$ & $0.1235$ \\ 
+ER + AS & $0.1828$ & $0.2018$ \\ 
+ER + SL & $0.1959$ & $0.2172$ \\ 
+ER + WE & $0.1922$ & $0.2158$ \\ 
+AS + SL & $0.2014$ & $0.2267$ \\ 
+AS + WE & $0.1965$ & $0.2211$ \\ 
+SL + WE & $0.1622$ & $0.1824$ \\ 
+ER + AS + SL & $0.2402$ & $0.2732$ \\ 
+ER + AS + WE & $0.2311$ & $0.2630$ \\ 
+ER + SL + WE & $0.2328$ & $0.2660$ \\ 
+AS + SL + WE & $0.2339$ & $0.2684$ \\ 
+ER + AS + SL + WE & $0.2659$ & $0.3070$ \\ 
 \bottomrule
 \end{longtable}
 
