--- a/includes/gen_dom.tex
+++ b/includes/gen_dom.tex
@@ -1,20 +1,15 @@
-\begin{longtable}{l|rrr}
+\begin{longtable}{l|rr}
+\caption*{
+{\large Table 4: General Dominance Statistics}
+} \\ 
 \toprule
-\multicolumn{1}{l}{} & General\_Dominance & Percent & Ranks \\ 
+\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/MJ \\ 
 \midrule
-\multicolumn{4}{l}{Normal} \\ 
-\midrule
-IV1 & $0.0089$ & $0.0793$ & 3 \\ 
-IV2 & $0.0171$ & $0.1515$ & 2 \\ 
-IV3 & $0.0048$ & $0.0424$ & 4 \\ 
-IV4 & $0.0818$ & $0.7268$ & 1 \\ 
-\midrule
-\multicolumn{4}{l}{Poisson} \\ 
-\midrule
-IV1 & $0.0064$ & $0.0785$ & 3 \\ 
-IV2 & $0.0123$ & $0.1509$ & 2 \\ 
-IV3 & $0.0035$ & $0.0435$ & 4 \\ 
-IV4 & $0.0592$ & $0.7270$ & 1 \\ 
+ER & $0.0688$ & $0.0778$ \\ 
+AS & $0.0757$ & $0.0869$ \\ 
+SL & $0.0611$ & $0.0709$ \\ 
+WE & $0.0603$ & $0.0714$ \\ 
+Overall & $0.2659$ & $0.3070$ \\ 
 \bottomrule
 \end{longtable}
 
